Fixed incorrect handling of http urls.